@@ -52,11 +52,14 @@ class ContentViewArticles extends JView
 	{
 		$state = $this->get('State');
 		JToolBarHelper::title(JText::_('Content_Articles_Title'), 'article.png');
-		if ($state->get('filter.published') != -1) {
-			JToolBarHelper::archiveList('articles.archive');
-		}
+		JToolBarHelper::custom('article.edit', 'new.png', 'new_f2.png', 'New', false);	
+		JToolBarHelper::custom('article.edit', 'edit.png', 'edit_f2.png', 'Edit', true);
+		JToolBarHelper::divider();
 		JToolBarHelper::custom('articles.publish', 'publish.png', 'publish_f2.png', 'Publish', true);
 		JToolBarHelper::custom('articles.unpublish', 'unpublish.png', 'unpublish_f2.png', 'Unpublish', true);
+		if ($state->get('filter.published') != -1) {
+			JToolBarHelper::archiveList('articles.archive');
+		}		
 		if ($state->get('filter.published') == -2) {
 			JToolBarHelper::deleteList('', 'articles.delete');
 		}
@@ -64,10 +67,8 @@ class ContentViewArticles extends JView
 			JToolBarHelper::trash('articles.trash');
 		}
 		JToolBarHelper::divider();
-		JToolBarHelper::custom('article.edit', 'edit.png', 'edit_f2.png', 'Edit', true);
-		JToolBarHelper::custom('article.edit', 'new.png', 'new_f2.png', 'New', false);
-		JToolBarHelper::divider();
 		JToolBarHelper::preferences('com_content');
+		JToolBarHelper::divider();		
 		JToolBarHelper::help('screen.content.articles');
 	}
 }
